REG-6542: spacing fix

--- a/dolly-web-core/src/main/web_src/src/components/beskrivelse/Beskrivelse.less
+++ b/dolly-web-core/src/main/web_src/src/components/beskrivelse/Beskrivelse.less
@@ -8,7 +8,6 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	min-height: 100px;
 }
 
 .beskrivelse-felt {
@@ -16,14 +15,16 @@
 	display: flex;
 	word-break: break-all;
 	flex-direction: column;
-	min-height: 150px;
+	min-height: 100px;
+	margin-top: 20px;
+	width: 100%;
 	white-space: pre-wrap;
 	min-height: 100px;
-	padding: 8px 8px 30px 8px;
-	outline: 0;
+	padding: 8px 8px 35px 8px;
 	border-radius: 4px;
 	border: 1px solid #c6c2bf;
 	background-color: #fafafa;
+	line-height: 1.45;
 }
 
 .beskrivelse-editor-textarea {
@@ -33,6 +34,7 @@
 	resize: none;
 	padding: 8px;
 	border-radius: 4px;
+
 	border: 1px solid #c6c2bf;
 }
 
@@ -47,8 +49,8 @@
 }
 
 .beskrivelse-button-container-editor {
-	bottom: 50px;
-	right: 10px;
+	bottom: 1.5rem;
+	right: 0.5rem;
 }
 
 .beskrivelse-button {
